...
            android:text="Folytatás Google fiókkal"
            android:textAllCaps="false"
            android:textColor="@color/signInButtonText"
            android:textSize="17sp" />

        <Button
            android:id="@+id/cntnAsGuest"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/cntAsGuest"
            android:background="@android:color/transparent"
...
