<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="Fő oldal"
        app:cnb_backgroundColor="@color/nav_bar_selected"
        app:cnb_iconColor="@color/nav_bar_selected_element"
        app:cnb_textColor="@color/nav_bar_selected_element"
        />

    <item
        android:id="@+id/explore"
        android:icon="@drawable/explore"
        android:title="Keresés"
        app:cnb_backgroundColor="@color/nav_bar_selected"
        app:cnb_iconColor="@color/nav_bar_selected_element"
        app:cnb_textColor="@color/nav_bar_selected_element"
        />

    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/bookmark"
        android:title="Mentett"
        app:cnb_backgroundColor="@color/nav_bar_selected"
        app:cnb_iconColor="@color/nav_bar_selected_element"
        app:cnb_textColor="@color/nav_bar_selected_element"
        />

    <item
        android:id="@+id/account"
        android:icon="@drawable/account_circle"
        android:title="Fiók"
        app:cnb_backgroundColor="@color/nav_bar_selected"
        app:cnb_iconColor="@color/nav_bar_selected_element"
        app:cnb_textColor="@color/nav_bar_selected_element"
        />
</menu>