...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mentett tartalmak"
        android:textColor="@color/bookmark_Title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
...
